[fix] 코드래빗 리뷰 수정